<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.secondpage.SecondActivity">

    <FrameLayout
        android:id="@+id/fl_app_bar"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        app:layout_constraintTop_toTopOf="parent">

        <include
            android:id="@+id/layout_app_bar"
            layout="@layout/layout_app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </FrameLayout>

    <TextView
        android:id="@+id/tv_welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_welcome"
        android:layout_margin="24dp"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@id/fl_app_bar"/>

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_name_default"
        tools:text="@string/text_name"
        android:layout_marginHorizontal="24dp"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/tv_welcome"/>

    <TextView
        android:id="@+id/tv_selected_user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/text_user_name"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_choose_user"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/text_choose_user"
        android:textSize="16sp"
        android:layout_margin="32dp"
        android:backgroundTint="#2B637B"
        app:cornerRadius="12dp"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>