<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.firstpage.MainActivity"
    android:background="@drawable/bg_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:layout_width="116dp"
            android:layout_height="116dp"
            android:contentDescription="@string/desc_img_profile"
            android:src="@drawable/img_profile"
            android:layout_gravity="center"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_name"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="64dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            app:hintEnabled="false"
            app:boxBackgroundColor="@color/white"
            app:boxCornerRadiusBottomEnd="12dp"
            app:boxCornerRadiusBottomStart="12dp"
            app:boxCornerRadiusTopEnd="12dp"
            app:boxCornerRadiusTopStart="12dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ti_et_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/text_input_name"
                android:padding="0dp"
                android:textSize="16sp"
                android:inputType="text"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_palindrome"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            app:hintEnabled="false"
            app:boxBackgroundColor="@color/white"
            app:boxCornerRadiusBottomEnd="12dp"
            app:boxCornerRadiusBottomStart="12dp"
            app:boxCornerRadiusTopEnd="12dp"
            app:boxCornerRadiusTopStart="12dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ti_et_palindrome"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/text_input_palindrome"
                android:padding="0dp"
                android:textSize="16sp"
                android:inputType="text"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_palindrome"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/text_palindrome"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginTop="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:backgroundTint="#2B637B"
            app:cornerRadius="12dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_next"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/text_next"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginTop="16dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:backgroundTint="#2B637B"
            app:cornerRadius="12dp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>